testdata/type_errors/parser_error.dws
// Test: Parser error (missing semicolon)
var x: Integer := 5
var y: Integer := 10;
PrintLn(x + y);
